[gd_scene load_steps=62 format=3 uid="uid://bsjhox57elqyw"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="Script" path="res://Scripts/shoot.gd" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://cqcl107jj676o" path="res://Textures/heal_overlay.tres" id="2_8eeqe"]
[ext_resource type="PackedScene" uid="uid://uqly3d23gal0" path="res://Assets/Guns/minigun.glb" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://uqudyihusbhr" path="res://Textures/blood_overlay.tres" id="3_5x828"]
[ext_resource type="AudioStream" uid="uid://bpjkwvd75ebl8" path="res://Assets/Audio/regfire.wav" id="4_vgqql"]
[ext_resource type="Script" path="res://Scripts/scoreboard.gd" id="5_e6mvm"]
[ext_resource type="AudioStream" uid="uid://4g8pmehrdwkk" path="res://Assets/Audio/draw.wav" id="5_fkybt"]
[ext_resource type="AudioStream" uid="uid://rt3e0mmsam23" path="res://Assets/Audio/winddown.wav" id="5_x3wgy"]
[ext_resource type="Script" path="res://Scripts/announcer.gd" id="7_nmr2m"]
[ext_resource type="AudioStream" uid="uid://dd037qqman124" path="res://Assets/Audio/Announcer/MMMMMONSTERKILL.WAV" id="8_ax3m3"]
[ext_resource type="AudioStream" uid="uid://b4kmb3dbws3rj" path="res://Assets/Audio/Announcer/assist.WAV" id="9_3vlem"]
[ext_resource type="AudioStream" uid="uid://h53ie6fvnh2l" path="res://Assets/Audio/Announcer/capture.WAV" id="10_8eeqe"]
[ext_resource type="PackedScene" uid="uid://cdu2a6k45o34w" path="res://Scenes/red_flag.tscn" id="10_c1k8q"]
[ext_resource type="AudioStream" uid="uid://bjkly4q4v8cj4" path="res://Assets/Audio/Announcer/dominating.WAV" id="11_5x828"]
[ext_resource type="PackedScene" uid="uid://cjjd4dba663eb" path="res://Scenes/blue_flag.tscn" id="11_e6mvm"]
[ext_resource type="AudioStream" uid="uid://c640ijt0n508a" path="res://Assets/Audio/Announcer/double-kill.WAV" id="12_c1k8q"]
[ext_resource type="AudioStream" uid="uid://ymal3w0y1udn" path="res://Assets/Audio/Announcer/eight.WAV" id="13_e6mvm"]
[ext_resource type="AudioStream" uid="uid://bb3e6hjbvimbh" path="res://Assets/Audio/Announcer/failed.WAV" id="14_57lvd"]
[ext_resource type="AudioStream" uid="uid://ie03kmchdvux" path="res://Assets/Audio/Announcer/first-blood.WAV" id="15_ie7r7"]
[ext_resource type="AudioStream" uid="uid://cft7ppgwi5of5" path="res://Assets/Audio/Announcer/five.WAV" id="16_vq3lt"]
[ext_resource type="AudioStream" uid="uid://crpbv6o1vrrpr" path="res://Assets/Audio/Announcer/five-minutes-remaining.WAV" id="17_pukcj"]
[ext_resource type="AudioStream" uid="uid://7skpns6w0k26" path="res://Assets/Audio/Announcer/four.WAV" id="18_1htnp"]
[ext_resource type="AudioStream" uid="uid://1iw74dp2jhmr" path="res://Assets/Audio/Announcer/godlike.WAV" id="19_m376e"]
[ext_resource type="AudioStream" uid="uid://blhaaq33hllp5" path="res://Assets/Audio/Announcer/headshot.WAV" id="20_6b312"]
[ext_resource type="AudioStream" uid="uid://b02uoh8vugbm7" path="res://Assets/Audio/Announcer/killing-spree.WAV" id="21_lisdf"]
[ext_resource type="AudioStream" uid="uid://bbyy3bo7lrgkk" path="res://Assets/Audio/Announcer/last-place.WAV" id="22_n1x1j"]
[ext_resource type="AudioStream" uid="uid://ckpokrcqq3dh3" path="res://Assets/Audio/Announcer/lost-the-lead.WAV" id="23_c8b32"]
[ext_resource type="AudioStream" uid="uid://0f8ldexp7ffr" path="res://Assets/Audio/Announcer/lost-the-match.WAV" id="24_nj1g2"]
[ext_resource type="AudioStream" uid="uid://cl04uly1d3b1v" path="res://Assets/Audio/Announcer/megakill.WAV" id="25_usbl8"]
[ext_resource type="AudioStream" uid="uid://cecpd8h2yfgh5" path="res://Assets/Audio/Announcer/multikill.WAV" id="26_dtg1u"]
[ext_resource type="AudioStream" uid="uid://dpbbue668jn36" path="res://Assets/Audio/Announcer/nice-catch.WAV" id="27_nuaet"]
[ext_resource type="AudioStream" uid="uid://d4m1r6x316hfb" path="res://Assets/Audio/Announcer/nine.WAV" id="28_bqbau"]
[ext_resource type="AudioStream" uid="uid://cix2hqow5nt6g" path="res://Assets/Audio/Announcer/one.WAV" id="29_f5f5t"]
[ext_resource type="AudioStream" uid="uid://bcdtahgh03wwh" path="res://Assets/Audio/Announcer/one-minute-remaining.WAV" id="30_qvbpb"]
[ext_resource type="AudioStream" uid="uid://dj7kkilk7a83t" path="res://Assets/Audio/Announcer/prepare.WAV" id="31_sscpr"]
[ext_resource type="AudioStream" uid="uid://drr7h7xgcd5bx" path="res://Assets/Audio/Announcer/rampage.WAV" id="32_by7i4"]
[ext_resource type="AudioStream" uid="uid://cpr7uoko8l0x8" path="res://Assets/Audio/Announcer/seven.WAV" id="33_3uvy8"]
[ext_resource type="AudioStream" uid="uid://bjta5xneqleni" path="res://Assets/Audio/Announcer/six.WAV" id="34_ss172"]
[ext_resource type="AudioStream" uid="uid://b1n7sec7a3hjj" path="res://Assets/Audio/Announcer/taken-the-lead.WAV" id="35_jmelf"]
[ext_resource type="AudioStream" uid="uid://bddjk5v85yy3h" path="res://Assets/Audio/Announcer/ten.WAV" id="36_bjdqd"]
[ext_resource type="AudioStream" uid="uid://cvpio6vvtiwj6" path="res://Assets/Audio/Announcer/thirty-seconds-left.WAV" id="37_feq18"]
[ext_resource type="AudioStream" uid="uid://m7bsg4j8ivd2" path="res://Assets/Audio/Announcer/three.WAV" id="38_wcnj3"]
[ext_resource type="AudioStream" uid="uid://conx0b2i8sulg" path="res://Assets/Audio/Announcer/three-minutes-remaining.WAV" id="39_jsob3"]
[ext_resource type="AudioStream" uid="uid://rb7mpcgk21j" path="res://Assets/Audio/Announcer/triple-kill.WAV" id="40_pg0gw"]
[ext_resource type="AudioStream" uid="uid://csnabxuqip8e5" path="res://Assets/Audio/Announcer/two.WAV" id="41_qavoy"]
[ext_resource type="AudioStream" uid="uid://bjedpffmml451" path="res://Assets/Audio/Announcer/ultrakill.WAV" id="42_w4w4b"]
[ext_resource type="AudioStream" uid="uid://w3a41eruqtat" path="res://Assets/Audio/Announcer/unstoppable.WAV" id="43_h5cax"]
[ext_resource type="AudioStream" uid="uid://cyua644df63d6" path="res://Assets/Audio/Announcer/winner.WAV" id="44_dj0x0"]
[ext_resource type="AudioStream" uid="uid://ey23750d7t36" path="res://Assets/Audio/Announcer/you-may-proceed.WAV" id="45_f1uaf"]
[ext_resource type="Texture2D" uid="uid://ct1blje1iup00" path="res://Assets/crosshair177.png" id="46_ax3m3"]

[sub_resource type="Animation" id="Animation_3smsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8erm5"]
_data = {
&"RESET": SubResource("Animation_3smsa"),
&"death": SubResource("Animation_x3wgy")
}

[sub_resource type="Animation" id="Animation_ax3m3"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5x828")]
}

[sub_resource type="Animation" id="Animation_3vlem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8eeqe")]
}

[sub_resource type="Animation" id="Animation_8eeqe"]
resource_name = "heal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8eeqe")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vlem"]
_data = {
&"RESET": SubResource("Animation_3vlem"),
&"heal": SubResource("Animation_8eeqe"),
&"hit": SubResource("Animation_ax3m3")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]
radius = 0.225
height = 1.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nmr2m"]
radius = 0.225
height = 1.6

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nmr2m"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation:y")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Pivot:rotation:x")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["Players"]]
script = ExtResource("1_v0iea")

[node name="DeathOverlay" type="CanvasLayer" parent="."]

[node name="DeathColor" type="ColorRect" parent="DeathOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="DeathAnimator" type="AnimationPlayer" parent="DeathOverlay"]
libraries = {
&"": SubResource("AnimationLibrary_8erm5")
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BloodOverlay" type="TextureRect" parent="HUD"]
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_8eeqe")

[node name="BloodAnimator" type="AnimationPlayer" parent="HUD/BloodOverlay"]
libraries = {
&"": SubResource("AnimationLibrary_3vlem")
}

[node name="CrosshairCenter" type="CenterContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="HUD/CrosshairCenter"]
layout_mode = 2
texture = ExtResource("46_ax3m3")

[node name="Scoreboard" type="PanelContainer" parent="HUD"]
custom_minimum_size = Vector2(50, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 72.0
grow_horizontal = 2
script = ExtResource("5_e6mvm")

[node name="Label" type="Label" parent="HUD/Scoreboard"]
layout_mode = 2
text = "2-0"
horizontal_alignment = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_f60y1")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="Camera" type="Camera3D" parent="Pivot"]
unique_name_in_owner = true

[node name="Shoot" type="RayCast3D" parent="Pivot"]
target_position = Vector3(0, 0, -100)
script = ExtResource("2_6t5aa")

[node name="Minigun" parent="Pivot/Shoot" instance=ExtResource("2_cvnsp")]
transform = Transform3D(-0.005, 0, 7.54979e-10, 0, 0.005, 0, -7.54979e-10, 0, -0.005, 0.065, -0.255, -0.495)

[node name="Barrel" parent="Pivot/Shoot/Minigun" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.65, 20.5, 95)

[node name="ShootSound" type="AudioStreamPlayer3D" parent="Pivot/Shoot"]
stream = ExtResource("4_vgqql")
max_db = -1.0

[node name="WindSound" type="AudioStreamPlayer3D" parent="Pivot/Shoot"]
stream = ExtResource("5_x3wgy")
max_db = -1.0

[node name="DrawSound" type="AudioStreamPlayer3D" parent="Pivot/Shoot"]
stream = ExtResource("5_fkybt")
max_db = -1.0

[node name="ShootTimer" type="Timer" parent="Pivot/Shoot"]
process_callback = 0
wait_time = 0.08

[node name="ShootLight" type="OmniLight3D" parent="Pivot/Shoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.174567, -0.136422, -1.09198)
light_color = Color(1, 0.423529, 0, 1)
light_energy = 0.0

[node name="RedFlag" parent="Pivot" instance=ExtResource("10_c1k8q")]
transform = Transform3D(-0.0381622, -0.124823, 0.991445, -0.956305, 0.292372, 0, -0.28987, -0.948124, -0.130526, 0.195, 0, -0.7)
visible = false
monitoring = false
monitorable = false

[node name="BlueFlag" parent="Pivot" instance=ExtResource("11_e6mvm")]
visible = false
monitoring = false
monitorable = false

[node name="Announcer" type="AudioStreamPlayer" parent="."]
script = ExtResource("7_nmr2m")

[node name="LinesPreloader" type="ResourcePreloader" parent="Announcer"]
resources = [PackedStringArray("MMMMMONSTERKILL", "assist", "capture", "dominating", "double-kill", "eight", "failed", "first-blood", "five", "five-minutes-remaining", "four", "godlike", "headshot", "killing-spree", "last-place", "lost-the-lead", "lost-the-match", "megakill", "multikill", "nice-catch", "nine", "one", "one-minute-remaining", "prepare", "rampage", "seven", "six", "taken-the-lead", "ten", "thirty-seconds-left", "three", "three-minutes-remaining", "triple-kill", "two", "ultrakill", "unstoppable", "winner", "you-may-proceed"), [ExtResource("8_ax3m3"), ExtResource("9_3vlem"), ExtResource("10_8eeqe"), ExtResource("11_5x828"), ExtResource("12_c1k8q"), ExtResource("13_e6mvm"), ExtResource("14_57lvd"), ExtResource("15_ie7r7"), ExtResource("16_vq3lt"), ExtResource("17_pukcj"), ExtResource("18_1htnp"), ExtResource("19_m376e"), ExtResource("20_6b312"), ExtResource("21_lisdf"), ExtResource("22_n1x1j"), ExtResource("23_c8b32"), ExtResource("24_nj1g2"), ExtResource("25_usbl8"), ExtResource("26_dtg1u"), ExtResource("27_nuaet"), ExtResource("28_bqbau"), ExtResource("29_f5f5t"), ExtResource("30_qvbpb"), ExtResource("31_sscpr"), ExtResource("32_by7i4"), ExtResource("33_3uvy8"), ExtResource("34_ss172"), ExtResource("35_jmelf"), ExtResource("36_bjdqd"), ExtResource("37_feq18"), ExtResource("38_wcnj3"), ExtResource("39_jsob3"), ExtResource("40_pg0gw"), ExtResource("41_qavoy"), ExtResource("42_w4w4b"), ExtResource("43_h5cax"), ExtResource("44_dj0x0"), ExtResource("45_f1uaf")]]

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nmr2m")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nmr2m")

[connection signal="finished" from="Pivot/Shoot/DrawSound" to="Pivot/Shoot" method="_on_draw_sound_finished"]
[connection signal="timeout" from="Pivot/Shoot/ShootTimer" to="Pivot/Shoot" method="_on_shoot_timer_timeout"]

[editable path="Pivot/Shoot/Minigun"]
